# Backend/src/1_routes/organizer.route.js
@@ -4,10 +4,14 @@ const payloadValidator = require("../2_middlewares/payloadValidator.middleware")
 const verifyAccessLevel = require("../2_middlewares/verifyAccessLevel.middleware");
 const { USER_VOLUNTEER } = require("../utils/constants");
 const { organizerCommentCreateSchema } = require("../2_middlewares/request_schemas/organizerCommentRequest.schema");
-const { postOrganizerComment } = require("../3_controllers/organizer.controller");
+const { postOrganizerComment, getOrganizerComments } = require("../3_controllers/organizer.controller");
 
 const organizerRoute = express.Router();
 
+// Public
+organizerRoute.get("/:organizerId/comments", getOrganizerComments);
+
+// Private
 organizerRoute.use(verifySesion);
 
 organizerRoute.post("/:organizerId/comments", payloadValidator(organizerCommentCreateSchema), verifyAccessLevel([USER_VOLUNTEER]), postOrganizerComment);
